@@ -34,6 +34,7 @@
 #include "om/om.h"
 #include "testsuite.h"
 #include "omrefcnt.h"
+#include "omstringstream.h"
 
 #ifdef MUS_BUILD_BACKEND_SLEEPY
 #include "../backends/sleepy/sleepy_list.h"
@@ -305,6 +306,24 @@ bool test_stringcomp1()
     return success;
 }
 
+bool test_omstringstream1()
+{
+    bool success = true;
+
+    om_ostringstream oss;
+    oss << "foo" << 4 << "bar";
+
+    if (oss.str() != "foo4bar") {
+	success = false;
+	if (verbose) {
+	    cout << "oss.str() returned `" << oss.str()
+		 << "' instead of foo4bar" << endl;
+	}
+    }
+
+    return success;
+}
+
 #ifdef MUS_BUILD_BACKEND_SLEEPY
 // test whether a SleepyList packs and unpacks correctly
 bool test_sleepypack1()
@@ -490,6 +509,7 @@ test_desc tests[] = {
 #ifdef MUS_BUILD_BACKEND_SLEEPY
     {"sleepypack1",		test_sleepypack1},
 #endif
+    {"omstringstream1",		test_omstringstream1},
 #if 0  // OmSettings currently disabled, and not used.  CME 20/6/2000
     {"omsettings1",		test_omsettings1},
     {"omsettings2",		test_omsettings2},
